[project]
name = "controls-challenge"
version = "0.1.0"
description = "Controls challenge project"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "numpy",
    "onnxruntime",
    "pandas==2.1.2",
    "matplotlib==3.8.1",
    "seaborn==0.13.2",
    "tqdm",
    "icecream>=2.1.8",
    "tinygrad",
    "casadi>=3.7.2",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }

[tool.ruff]
indent-width = 2
format.exclude = ["tinyphysics.py", "eval.py", "experiment.ipynb", "controllers/pid.py", "controllers/zero.py"]
